--- a/assets/css/sass/_general.scss
+++ b/assets/css/sass/_general.scss
@@ -33,6 +33,19 @@ body{
     text-align:left;
 }
 
+.sewchic-menu{
+    font-size:20px;
+    ul { display:none; }
+    a{
+        color:$black;
+        text-decoration:none;
+        &:hover{
+            text-decoration:underline;
+        }
+    }
+}
+
+
 
 @media screen and (min-width: 768px){
     .stepped-wrap{
@@ -42,18 +55,42 @@ body{
     .sewchic-row{
         display:flex;
         flex-flow:row nowrap;
+        &.sewchic-row-reverse{
+            flex-flow:row-reverse nowrap;
+        }
     }
 
     .sewchic-cell{
-        flex: 1000 auto;
+        flex: 1000 0%;
         margin-right:30px;
         &:last-of-type{
             margin-right:0;
         }
-        &.sewchic-right-rail{
+        //special cases
+        &.force-one-fifth{
+            flex: 1 20%;
+        }
+        &.force-quarter-width{
             flex: 1 25%;
+        }
+        &.force-half-width{
+            flex: 1 50%;
+        }
+        &.sewchic-right-rail{
             min-width:175px;
         }
+    }
+
+    .sewchic-row-reverse .sewchic-cell{
+        margin-left:30px;
+        margin-right:0;
+        &:last-of-type{
+            margin-left:0;
+        }
+    }
+
+    .sewchic-menu{
+        padding-left:25px;
     }
 }
 
