allow footer submenus to display

--- a/assets/css/sass/_general.scss
+++ b/assets/css/sass/_general.scss
@@ -35,7 +35,7 @@ body{
 
 .sewchic-menu{
     font-size:20px;
-    ul { display:none; }
+    //ul { display:none; }
     a{
         color:$black;
         text-decoration:none;
