--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -987,7 +987,7 @@ nav.woocommerce-MyAccount-navigation{
     display:block;
     margin-bottom:7px;
 }
-.woocommerce-product-search input[type="submit"]{
+.woocommerce-product-search button[type="submit"]{
     display:block;
     margin-top:5px;
     width:100%;
