--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -718,7 +718,7 @@ nav.woocommerce-MyAccount-navigation ul {
   display: block;
   margin-bottom: 7px; }
 
-.woocommerce-product-search input[type="submit"] {
+.woocommerce-product-search button[type="submit"] {
   display: block;
   margin-top: 5px;
   width: 100%; }
