--- a/assets/css/sass/single.scss
+++ b/assets/css/sass/single.scss
@@ -11,7 +11,8 @@ figcaption{
 }
 
 figure.sewchic-single-featured-image{
-    margin:10px 0 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
     img{
         width: 100%;
         height: auto;
