small style fixes

--- a/assets/css/sass/single.scss
+++ b/assets/css/sass/single.scss
@@ -150,11 +150,12 @@ figure.sewchic-single-featured-image{
         margin: 20px 0;
         .sewchic-comment-author-avatar{
             float:left;
-            margin: 8px 7px 2px 0;
+            margin: 5px 7px 2px 0;
         }
 
         .sewchic-comment-time-posted{
             color:$light-grey;
+            font-size:14px;
         }
 
         .sewchic-comment-actions a{
