--- a/assets/css/single.css
+++ b/assets/css/single.css
@@ -125,9 +125,10 @@ figure.sewchic-single-featured-image {
     margin: 20px 0; }
     #sewchic_comments_area .sewchic-comment .sewchic-comment-author-avatar {
       float: left;
-      margin: 8px 7px 2px 0; }
+      margin: 5px 7px 2px 0; }
     #sewchic_comments_area .sewchic-comment .sewchic-comment-time-posted {
-      color: #aeaeae; }
+      color: #aeaeae;
+      font-size: 14px; }
     #sewchic_comments_area .sewchic-comment .sewchic-comment-actions a {
       display: block; }
   #sewchic_comments_area .comment-respond textarea#sewchic_comment_respond {
