--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -205,8 +205,8 @@ table.shop_table.cart{
                 &:before{
                     content:attr(aria-label);
                     padding:5px 7px;
-                    color:white;
-                    background:red;
+                    color:$white;
+                    background:$red;
                     border-radius:5px;
                     font-size:27px;
                     background-image:linear-gradient(to bottom, $red 0, $requiredRed 100% );
@@ -872,9 +872,19 @@ ul.products{
     }
     #filter_widgets_bin{
         text-align:center;
-        ul{
-            list-style-type:none;
-            padding:0;
+        ul li.chosen a{
+            &:after{
+                content: 'x';
+                display: inline-block;
+                padding:0 5px 2px;
+                margin-left:5px;
+                color: $red;
+                font-size:14px;
+            }
+            &:hover::after{
+                color: $white;
+                background-color: $red;
+            }
         } 
         .price_slider_wrapper > div{
             margin:15px 0;
