another style fix

--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -899,6 +899,9 @@ ul.products{
                 margin:5px 0;
             }
         }
+        button[type="submit"], input[type="submit"]{
+            margin-top:5px;
+        }
     }
     
 }
