no issue - adjust style on related products to match the style in the archive

--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -830,7 +830,7 @@ ul.products{
                 font-size:18px;
                 margin:0;
                 text-align:right;
-                max-width:190px;
+                max-width:80%;
             }
             .added_to_cart{
                 position: absolute;
