--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -631,7 +631,7 @@ ul.products {
         font-size: 18px;
         margin: 0;
         text-align: right;
-        max-width: 190px; }
+        max-width: 80%; }
       ul.products li .added_to_cart {
         position: absolute;
         top: 0;
