--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -795,6 +795,7 @@ ul.products{
             width:100%;
             height:auto;
             max-height:100%; 
+            margin-bottom:5px;
         }
         &:last-of-type{
             margin-bottom:0;
