--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -604,7 +604,8 @@ ul.products {
     ul.products li img {
       width: 100%;
       height: auto;
-      max-height: 100%; }
+      max-height: 100%;
+      margin-bottom: 5px; }
     ul.products li:last-of-type {
       margin-bottom: 0;
       border-bottom: none; }
