tweak styles for square integration

--- a/assets/css/sass/woocommerce.scss
+++ b/assets/css/sass/woocommerce.scss
@@ -395,6 +395,11 @@ table.shop_table.woocommerce-checkout-review-order-table{
             font-weight: 700;
         }
     }
+    label[for="payment_method_square"] {
+        img {
+            max-width: 32px;
+        }
+    }
 }
 
 table.order_details{
