--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -383,9 +383,9 @@ input[type="week"] {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
 
-.input-checkbox {
+.sewchic-search-checkbox {
   display: none; }
-  .input-checkbox + .input-checkbox-label {
+  .sewchic-search-checkbox + .sewchic-search-checkbox-label {
     position: relative;
     display: inline-block;
     background-color: #efefef;
@@ -406,7 +406,7 @@ input[type="week"] {
 
 @media screen and (min-width: 768px) {
   #sewchic_search_form input {
-    padding: 6px 0; }
+    padding: 6px 10px; }
   #sewchic_search_form label {
     position: relative;
     top: 4px; }
